--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Typoid</title>
     </head>
-    <body>
+    <body style="width: 100vw; height: 100vh; padding: 0; margin: 0">
         <div id="react-root" />
         <script type="text/javascript" src="js/main.js"></script>
     </body>
