--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
     <head>
         <meta charset="utf-8">
         <title>Typoid</title>
+        <link rel="stylesheet" type="text/css" href="third_party/css/bootstrap.min.css" />
     </head>
     <body style="width: 100vw; height: 100vh; padding: 0; margin: 0">
         <div id="react-root" />
+        <script type="text/javascript" src="third_party/js/bootstrap.bundle.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
